Initial (working) realease

--- a/CSharp operators/App.config
+++ b/CSharp operators/App.config
@@ -24,6 +24,15 @@
       <setting name="DefaultSecondValue" serializeAs="String">
         <value>2</value>
       </setting>
+      <setting name="FirstParamName" serializeAs="String">
+        <value>x</value>
+      </setting>
+      <setting name="SecondParamName" serializeAs="String">
+        <value>y</value>
+      </setting>
+      <setting name="OperationResultLiteral" serializeAs="String">
+        <value>result</value>
+      </setting>
     </CSharp_operators.Properties.Settings>
   </userSettings>
 </configuration>
